# Bin-Picking-Dataset-Generation

./: .gitignore  1_pybullet_create_n_collect.py  1_pybullet_create_n_collect_custom.py  2_open3d_reconstruct_pcd_scene.py  3_generate_pcd_fov_points.py  4_generate_h5.py  H5DataGenerator_custom.py  README.md  camera_config.py  cpu.sbatch  data_generation_setting.json  generate_h5_custom.py  pyproject.toml  verify_dataset_polyscope.py  visualize_and_verify_no_collision.py  visualize_new_h5.py
.devcontainer/: Dockerfile  devcontainer.json
model/teris/: I.urdf  J.urdf  O.urdf  S.urdf  T.urdf  class.json
scripts/: quick_h5.py  quick_ps.py  temp.py
temp_fix/: 1_verify_before_fix.py  2_fix_labels.py  3_verify_after_fix.py
tests/: conftest.py  test_h5.py  test_integration.py
util/: check_pcd.py  convert_obj_convexhull.py
zivid/: mr_460.json
