[project]
name = "binpack-datasets"
version = "0.0.1"
authors = [
  { name="Ziqi Wang", email="ziqiw@ust.hk" },
]

dependencies = [
    "open3d",
    "pybullet",
    "matplotlib",
    "h5py>=3.15.1",
    "polyscope>=2.5.0",
    "trimesh>=4.10.0",
    "python-fcl>=0.7.0.10",
    "rtree>=1.4.1",
    "scipy>=1.15.3",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.2",
]

description = "A package for conducting research using robots for assembly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["src/learn2assemble"]
include = ["src/**"]

[build-system]
requires = ["hatchling >= 1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
]

[project.urls]
Homepage = "https://github.com/kiki007/LearningToAssemble"
Issues = "https://github.com/kiki007/LearningToAssemble/issues"
